--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
   --color-dark-grey: #333333;
   --color-light-grey: #3f3f3f;
   --color-ultra-light-grey: rgb(138, 138, 138);
-  --font-heading-primary: "Great Vibes";
-  --font-heading-secondary: "Raleway";
+  --font-heading-primary: "Cormorant Garamond";
+  --font-heading-secondary: "Cormorant Garamond";
   --font-buttons: "Raleway";
   --font-body: "Mulish";
 }
